overflow solved

--- a/toDoList/style.css
+++ b/toDoList/style.css
@@ -121,6 +121,14 @@ body{
 	width: 85%;
 	text-align: left;
 	padding-left: 5px;
+	white-space: nowrap;
+	overflow:hidden;
+	text-overflow: ellipsis;
+}
+
+.expanded{
+	white-space: normal;
+	overflow: visible;
 }
 
 .close-btn{
@@ -128,7 +136,7 @@ body{
 	width: 40px;
 	border-radius: 50px;
 	background-image: url("icons/close1.svg");
-	background-color: inherit;
+	background-color: unset;
 	background-repeat: no-repeat;
 	cursor: pointer;
 	border: none;
